# Studying

./: C_syntax_assesment_simple.c  C_syntax_structures_unfinished.c  e-dziennik.c  max_value_of_float.c  quick_sort.c
E-Dziennik/sources/: e-dziennik.c  function_for_edziennik.c
First_library in VSC/: CMakeLists.txt  main.c
Histogram/: Histonogram.c
ONP-calculator-getline adaptation/: README!  main.c
Phone_company/: CMakeLists.txt  CMakePresets.json  READ ME!.txt  main.c
Phone_company/finding_and_names/: CMakeLists.txt  finding_and_names.c  finding_and_names.h
Phone_company/operetion_on_list_of_phones/: CMakeLists.txt  operetion_on_list_of_phones.c  operetion_on_list_of_phones.h
Phone_company/phones_operetions_on_price/: CMakeLists.txt  phones_operetions_on_price.c  phones_operetions_on_price.h
Phone_company/phones_showing/: CMakeLists.txt  phones_showing.c  phones_showing.h
Prostokat/: main.c
e-dziennik/: CMakeLists.txt
e-dziennik/sources/: e-dziennik.c  function_for_edziennik.c
text_Fuctions_On_pointers/: main.c
troubled ONP/: main.c
